--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ h2 {
 }
 
 .name-id {
-    text-transform: capitalize;
+    text-transform: uppercase;
     font-size: 2rem;
     font-weight: 500;
     margin-bottom: 1rem;
