--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     padding: 0;
     margin: 0;
     box-sizing: inherit;
+    /* border: 0.5px solid black; */
 }
 
 html {
@@ -93,7 +94,11 @@ h2 {
     align-items: center;
     justify-content: center;
     margin: 1rem 0;
-    height: 30rem;
+    height: 25rem;
+}
+
+#sprite {
+    width: 20rem;
 }
 
 #types {
@@ -112,6 +117,7 @@ h2 {
     min-width: 5rem;
     text-align: center;
     font-size: 1.3rem;
+    text-transform: uppercase;
 }
 
 table {
@@ -121,6 +127,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
+    text-align: center;
 }
 
 tr,
