--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,17 @@ td {
     border: 0.5rem solid var(--container);
 }
 
+footer {
+    margin-top: 3rem;
+    color: white;
+    font-size: 1.4rem;
+    font-style: italic;
+}
+
+footer a {
+    color: white;
+}
+
 /* Special styling for Pokémon types */
 
 .normal {
